2006-11-05  Brian Matherly  <brian@gramps-project.org>
	* src/plugins/NarrativeWeb.py: Add street to place page.

2006-11-05  Don Allingham  <don@gramps-project.org>
	* src/plugins/Makefile.am: add RemoveUnused.py
	* src/plugins/RemoveUnused.py: remove unused sources and events, and UI
	* src/DataViews/_PersonView.py: provide a default surname for and Add
	Person button press based of selected item in the Person View tree.
	* help/C/various: remove unused files from manual
	* src/DataViews/_PlaceView.py: drag-n-drop support
	* src/GrampsWidgets.py: drag-n-drop support for place selector widget
	* src/ScratchPad.py: drag-n-drop support for places
	* src/DdTargets.py: drag-n-drop support for places

2006-11-05  Alex Roitman  <shura@gramps-project.org>
	* NEWS: Update.
	* configure.in (ALL_LINGUAS): Add Turkish language.

2006-11-04  Don Allingham  <don@gramps-project.org>
	* src/GrampsCfg.py: warn that chaning date format will not take
	effect until next start
	* src/DisplayState.py: remove redundant code

2006-11-04  Martin Hawlisch  <Martin.Hawlisch@gmx.de>
	* src/plugins/ImportGeneWeb.py: Bugfixes (convert to new api);
	Add support for some more geneweb features

2006-11-03  Alex Roitman  <shura@gramps-project.org>
	* configure.in: Bump up the version.
	* src/Editors/_EditLdsOrd.py (update_parent_label): Spurious
	translation.
	* src/DataViews/_RelationView.py (write_event_ref): Spurious
	translation.
	* src/ReportBase/_ReportDialog.py (get_header): Spurious
	translation.
	* RELEASE: version 2.2.2 is released.

2006-11-02  Don Allingham  <don@gramps-project.org>
	* src/DataViews/_RelationView.py: fix spacing
	* src/ScratchPad.py: handle deleting of a person properly

2006-11-02  Alex Roitman  <shura@gramps-project.org>
	* src/GrampsDb/_GrampsBSDDB.py (gramps_upgrade_9): Typo.
	* NEWS: Update.

2006-11-01  Don Allingham  <don@gramps-project.org>
	* src/plugins/DescendReport.py: handle exceeding the max generations
