@@ -1,5 +1,7 @@
 2006-11-05  Brian Matherly  <brian@gramps-project.org>
 	* src/plugins/NarrativeWeb.py: Add street to place page.
+	* src/plugins/NarrativeWeb.py: Add family event gallery items to 
+	  individual page
 
 2006-11-05  Don Allingham  <don@gramps-project.org>
 	* src/plugins/Makefile.am: add RemoveUnused.py
